--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-
-1\.0\.4/
-
-output/
+# ignore packages (this is for nuget stuff)
+/packages/*
+# ignore output (because we put stuff there)
+/output/*
+# Ignore version number folders (these are our intermediate "output" directories for testing)
+/[0-9]*/
